# XTIMATE

./: README.md
Baselines/a-ICDE22/: CMakeLists.txt  README.md  execute_commands
Baselines/a-ICDE22/run/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Baselines/a-ICDE22/run/include/: predictRatio.h
Baselines/a-ICDE22/run/src/: predictRatio.cpp
Baselines/b-IPDPS18/: README.md  run.sh  tmprun.sh
Baselines/b-IPDPS18/SZ/: Makefile  README.md  config.status  installInstructions.md  libtool  tags
Baselines/b-IPDPS18/gauss/: README.md  gauss.py  gauss.txt  gauss_run.sh
Baselines/b-IPDPS18/inputdata/: buildsample.sh  sample.py
Baselines/b-IPDPS18/sz-compression-ratio-estimation/: README_SZv1.4.9_CR_Estimation  (+2 more)
Compressors-executables/a-SZ3/: README.md  execute_commands
Compressors-executables/b-SZ1.4/: Makefile  README.md  config.status  libtool
Compressors-executables/c-ZFP0.5.0/: README.md
Compressors-executables/d-MGARD+/: README.md
Datasets/: README.md
Our-framework/: README.md  run_workflow.sh
Our-framework/XTIMATE-inputs/: README.md  user_specified_error_bounds.csv
Our-framework/XTIMATE-outputs/: README.md
Our-framework/a-feature-extraction-and-optimization-module/: CMakeLists.txt  Makefile  build_cmake.sh  clean_cmake_caches.sh  main.cpp
Our-framework/a-feature-extraction-and-optimization-module/include/: extractFeatures.h  obtainCompressionResults.h
Our-framework/a-feature-extraction-and-optimization-module/src/: extractFeatures.cpp  obtainCompressionResults.cpp
Our-framework/b-ml-module/: randomForestRegressor.py
Our-framework/c-model-evaluation/: measureXTIMATEaccuracy.py  measureXTIMATEefficiency.py
(+102 files in other folders)
